23/02/2015 - 1.0 - Fenix - initial release
10/03/2015 - 1.1 - Fenix - added plugin dependency loading